# number-transcription

./: .gitignore  README.md  TODO.md  pyproject.toml
number_transcription/: __init__.py  enums.py
number_transcription/russian/: __init__.py  conversion.py  enums.py  storage.py  tests.py
